issues corregidos