@@ -2,61 +2,62 @@ package com.udea.comunicacionSoporte.service;
 
 import com.udea.comunicacionSoporte.dto.PqrsDTO;
 import com.udea.comunicacionSoporte.entity.*;
+import com.udea.comunicacionSoporte.exception.ResourceNotFoundException;
 import com.udea.comunicacionSoporte.mapper.PqrsMapper;
 import com.udea.comunicacionSoporte.repository.*;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class PqrsService {
 
-    @Autowired
-    private PqrsRepository pqrsRepository;
+    private final PqrsRepository pqrsRepository;
+    private final TipoPQRSRepository tipoPQRSRepository;
+    private final EstadoPQRSRepository estadoPQRSRepository;
+    private final ClienteRepository clienteRepository;
+    private final EmpleadoRepository empleadoRepository;
 
-    @Autowired
-    private TipoPQRSRepository tipoPQRSRepository;
-
-    @Autowired
-    private EstadoPQRSRepository estadoPQRSRepository;
-
-    @Autowired
-    private ClienteRepository clienteRepository;
-
-    @Autowired
-    private EmpleadoRepository empleadoRepository;
+    public PqrsService(PqrsRepository pqrsRepository,
+                       TipoPQRSRepository tipoPQRSRepository,
+                       EstadoPQRSRepository estadoPQRSRepository,
+                       ClienteRepository clienteRepository,
+                       EmpleadoRepository empleadoRepository) {
+        this.pqrsRepository = pqrsRepository;
+        this.tipoPQRSRepository = tipoPQRSRepository;
+        this.estadoPQRSRepository = estadoPQRSRepository;
+        this.clienteRepository = clienteRepository;
+        this.empleadoRepository = empleadoRepository;
+    }
 
     public List<PqrsDTO> listarTodas() {
         return pqrsRepository.findAll().stream()
                 .map(PqrsMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<PqrsDTO> listarPorIdUsuario(Long id) {
         return pqrsRepository.findByClienteIdCliente(id).stream()
                 .map(PqrsMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public PqrsDTO obtenerPorId(Long id) {
         return pqrsRepository.findById(id)
                 .map(PqrsMapper::toDTO)
-                .orElseThrow(() -> new RuntimeException("PQRS no encontrada con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("PQRS no encontrada con ID: " + id));
     }
 
     public PqrsDTO crear(PqrsDTO dto) {
         TipoPQRS tipo = tipoPQRSRepository.findById(dto.getIdTipoPqrs())
-                .orElseThrow(() -> new RuntimeException("Tipo PQRS no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Tipo PQRS no encontrado"));
         Cliente cliente = clienteRepository.findById(dto.getIdCliente())
-                .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Cliente no encontrado"));
         Empleado gestor = empleadoRepository.findById(dto.getIdEmpleadoGestor())
-                .orElseThrow(() -> new RuntimeException("Gestor no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Gestor no encontrado"));
         EstadoPQRS estado = estadoPQRSRepository.findById(dto.getIdEstadoPqrs())
-                .orElseThrow(() -> new RuntimeException("Estado PQRS no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Estado PQRS no encontrado"));
 
         LocalDateTime fechaRadicacion = LocalDateTime.now();
         dto.setFechaRadicacion(fechaRadicacion);
@@ -67,16 +68,16 @@ public class PqrsService {
 
     public PqrsDTO actualizar(Long id, PqrsDTO dto) {
         PQRS existente = pqrsRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("PQRS no encontrada con ID: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("PQRS no encontrada con ID: " + id));
 
         TipoPQRS tipo = tipoPQRSRepository.findById(dto.getIdTipoPqrs())
-                .orElseThrow(() -> new RuntimeException("Tipo PQRS no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Tipo PQRS no encontrado"));
         Cliente cliente = clienteRepository.findById(dto.getIdCliente())
-                .orElseThrow(() -> new RuntimeException("Cliente no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Cliente no encontrado"));
         Empleado gestor = empleadoRepository.findById(dto.getIdEmpleadoGestor())
-                .orElseThrow(() -> new RuntimeException("Gestor no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Gestor no encontrado"));
         EstadoPQRS estado = estadoPQRSRepository.findById(dto.getIdEstadoPqrs())
-                .orElseThrow(() -> new RuntimeException("Estado PQRS no encontrado"));
+                .orElseThrow(() -> new ResourceNotFoundException("Estado PQRS no encontrado"));
 
         existente.setTipoPqrs(tipo);
         existente.setCliente(cliente);
@@ -93,7 +94,7 @@ public class PqrsService {
 
     public void eliminar(Long id) {
         if (!pqrsRepository.existsById(id)) {
-            throw new RuntimeException("PQRS no encontrada con ID: " + id);
+            throw new ResourceNotFoundException("PQRS no encontrada con ID: " + id);
         }
         pqrsRepository.deleteById(id);
     }
